LWCLearnwithFLOWOrg/force-app/main/default/objects/PB_Activation__c/PB_Activation__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>2020-4-21 - J. Kim - This is a switch to turn off specific nodes within process builder, workflow rules, and validation rules.</description>
    <label>PB Activation</label>
</CustomObject>