LWCLearnwithFLOWOrg/force-app/main/default/objects/PB_Activation__c/fields/All_PB__c.field-meta.xml
<CustomField>
    <fullName>All_PB__c</fullName>
    <defaultValue>true</defaultValue>
    <label>All PB</label>
    <type>Checkbox</type>
</CustomField>