LWCLearnwithFLOWOrg/force-app/main/default/objects/PB_Activation__c/fields/Ambassador_Activity__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ambassador Activity</label>
    <type>Checkbox</type>
</CustomField>