LWCLearnwithFLOWOrg/force-app/main/default/objects/PB_Activation__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campaign</label>
    <type>Checkbox</type>
</CustomField>