LWCLearnwithFLOWOrg/force-app/main/default/objects/PB_Activation__c/fields/Campaign_Member__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campaign Member</label>
    <type>Checkbox</type>
</CustomField>