LWCLearnwithFLOWOrg/force-app/main/default/objects/PB_Activation__c/fields/Customer_Setup__c.field-meta.xml
<CustomField>
    <fullName>Customer_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Setup</label>
    <type>Checkbox</type>
</CustomField>